# garbage_code

./: .gitignore  README.md
code/arduino_code/stop/: stop.ino
code/arduino_code/test1/: test1.ino
code/arduino_code/test10/: test10.ino
code/arduino_code/test11/: test11.ino
code/arduino_code/test12/: test12.ino
code/arduino_code/test13/: test13.ino
code/arduino_code/test14/: test14.ino
code/arduino_code/test15/: test15.ino
code/arduino_code/test2/: test2.ino
code/arduino_code/test3/: test3.ino
code/arduino_code/test4/: test4.ino
code/arduino_code/test5/: test5.ino  test5.txt
code/arduino_code/test6/: test6.ino
code/arduino_code/test7/: test7.ino
code/arduino_code/test8/: test8.ino
code/arduino_code/test9/: test9.ino
code/cpp_code/: CMakeLists.txt  accumulate.cpp  algorithm.cpp  arithmetic_operations.cpp  arrays.cpp  banking.cpp  compiling_doc.txt  conditional_comp.cpp  const.cpp  container_operators.cpp  deadlock_and_guard.cpp  dynamic_mem.cpp  dynamic_structures.txt  enums.cpp  fill.cpp  find_hypotenuse.cpp  forward_list.cpp  func_templates.cpp  helloworld.cpp  lambda_expressions.cpp  list.cpp  manyfile_proj.cpp  map_multimap.cpp  mem_addrs.cpp  multi_thread.cpp  multidim_arrays.cpp  mutex.cpp  nested_loops.cpp  number_guess_game.cpp  oop.cpp  oop_part_two.cpp  overloaded_func.cpp  pointer_to_func.cpp  pointers.cpp  predicats.cpp  queue.cpp  quiz.cpp  read_write_file.cpp  recursive_mutex.cpp  reg.cpp  (+30 more)
code/cpp_code/for_compilation/: Bar.cpp  Bar.hpp  Foo.cpp  Foo.hpp  compiling_doc.md  myclass.cpp  myclass.hpp  person.cpp  person.hpp  sum.cpp
code/cpp_code/for_compilation/person/: algorithm.cpp  predicats.cpp  stl_find_copy.cpp  stl_remove.cpp
code/cpp_code/generated_files/: fs_file  fs_obj_file  my_file  obj_file  readme.txt
compiled/linux/: accumulate  algorithm  arithmetic_operations  arrays  banking  conditional_comp  const  container_operators  deadlock_and_guard  dynamic_mem  enums  fill  find_hypotenuse  forward_list  func_templates  helloworld  lambda_expressions  list  manyfile_proj  map_multimap  mem_addrs  multi_thread  multidim_arrays  mutex  nested_loops  oop  oop_part_two  overloaded_func  pointer_to_func  pointers  predicats  queue  recursive_mutex  reg  rng  set_multiset  singly_linked_list  smart_pointers  sort_array  stack  (+21 more)
compiled/linux/games/: number_guess_game  quiz  rps  tic_tac_toe
compiled/linux/read_write_file/: read_write_file
compiled/linux/read_write_file/generated_files/: readme.txt
